--- a/views/new.pug
+++ b/views/new.pug
@@ -4,6 +4,9 @@ block content
     link(rel='stylesheet', href='/stylesheets/new.css')
 
     header
+        div(class="home")
+            a(href="http://localhost:3000")
+                button(id="homebtn" , class="button") <
         h1 NEW ARTICLE
     div(class="container")
         form(id="article-form", class="article-form", method="post", enctype="multipart/form-data", action="")
