--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,8 @@
 doctype html
 html
   head
+    meta(name="viewport", content="width=device-width, initial-scale=1.00, user-scalable=no")
+    meta(http-equiv='content-type', content='text/html; charset=UTF-8')
     title= title
   body
     block content
