--- a/views/list.pug
+++ b/views/list.pug
@@ -1,4 +1,12 @@
 extends layout
 
 block content
-    p Welcome to Articles
+    link(rel='stylesheet', href='/stylesheets/list.css')
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    script(src="../javascripts/listarticles.js")
+
+    header
+        div(class="home")
+            a(href="http://localhost:3000")
+                button(id="homebtn" , class="control") <
+        h1 ARTICLES
