professionalized guuud routes

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,9 @@ block content
 
   div(class="container")
     div(class="buttons")
-      a(href="/new")
+      a(href="/articles?articleID=newarticle")
         button(id="newbtn", class="new button")
           span(class="button-text") New
-      a(href="/list")
+      a(href="/articles?articleID=listarticles")
         button(id="listbtn", class="list button")
           span(class="button-text") List
