--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -17,7 +17,7 @@ body {
 header{
     position: relative;
     text-align: center;
-    margin: 10px 10px 30px;
+    margin: 10px;
     box-sizing: border-box;
     padding: 10px;
     border: 2px solid white;
@@ -48,6 +48,27 @@ h1{
     font-family: "Consolas", serif;
 }
 
+.page-container{
+    display: block;
+    text-align: center;
+    max-height: 30px;
+}
+
+ul{
+    margin: 0 0 10px;
+    padding-left:20px;
+    list-style: none;
+}
+
+ul > li{
+    list-style: none;
+    display: inline;
+}
+
+ul button{
+    margin-bottom: 10px;
+}
+
 .container{
     position: relative;
     padding: 10px;
@@ -74,7 +95,7 @@ h1{
 }
 
 .a-image{
-    width:100%;
+    min-height: 125px;
 }
 
 .article-card{
