--- a/views/new.pug
+++ b/views/new.pug
@@ -9,7 +9,7 @@ block content
                 button(id="homebtn" , class="button") <
         h1 NEW ARTICLE
     div(class="container")
-        form(id="article-form", class="article-form", method="post", enctype="multipart/form-data", action="")
+        form(id="article-form", class="article-form", method="post", enctype="multipart/form-data", action="http://localhost:3000/articles")
             label(for="article-title") Title:
                 input(type="text", placeholder=" Write title here...", id="article-title", name="a-title", required)
             label(for="article-image") Image:
@@ -28,4 +28,5 @@ block content
                     span(class="button-text") Create
                 button(type="reset", class="reset button")
                     span(class="button-text") Reset
-    script(src="../javascripts/newcategory.js")
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    script(src="../javascripts/new_article.js")
