--- a/views/postSaved.pug
+++ b/views/postSaved.pug
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-    link(rel='stylesheet', href='/stylesheets/iframe.css')
+    link(rel='stylesheet', href='/stylesheets/category.css')
 
     header
         h1 Post Saved!
     div(class="container")
-        a(href="/new")
+        a(href="/articles?articleID=newarticle")
             button(id="new", class="new button")
                 span(class="button-text") New
         a(href="/")
