--- a/views/list.pug
+++ b/views/list.pug
@@ -5,7 +5,7 @@ block content
 
     header
         div(class="home")
-            a(href="http://localhost:3000")
+            a(href="/")
                 button(id="homebtn" , class="control") <
         h1 ARTICLES
     div(class="page-container")
