--- a/views/new.pug
+++ b/views/new.pug
@@ -5,7 +5,7 @@ block content
 
     header
         div(class="home")
-            a(href="http://localhost:3000")
+            a(href="/")
                 button(id="homebtn" , class="button") <
         h1 NEW ARTICLE
     div(class="container")
